--- a/style.css
+++ b/style.css
@@ -1,5 +1,41 @@
+/* reset */
+html {
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
 body {
+  padding: 0;
+  margin: 0;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  text-align: center; 
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  background-image: url('./background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+}
+
+.main .title {
+  width: 100%;
+  font-size: 40px;
   text-align: center;
-  font-family: Arial, sans-serif;
-  margin-top: 60px;
+}
+
+
+.main .clock {
+  font-kerning: none;
+  font-size: 165.47pt;
+  text-align: center;
+}
+
+.main .date {
+  text-align: center;
+  font-size: 40pt;
 }
